Watchlist order update added. Swagger update.
